# localcube-server

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
config/: Config.toml
src/: main.rs
