[package]
name = "localcube-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
toml = "0.8.23"
serde = { version="1.0.219", features=["derive"] }
